[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day8"
required-features = ["smol_str"]

[dependencies]
smol_str = { version = "0.2", optional = true }

[features]
default = ["smol_str"]